--- a/config-sm/kitty/kitty.conf
+++ b/config-sm/kitty/kitty.conf
@@ -1,3 +1,6 @@
+# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
+
+
 # vim:fileencoding=utf-8:ft=conf
 
 #local icons = require "nvim-nonicons"
@@ -8,7 +11,7 @@ italic_font      auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        9.0
+font_size        10.0
 
 scrollback_lines 20000
 scrollback_pager vimpager +G -R
